--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,5 @@
 <div class= "container">
   <h1> Welcome to Politips </h1>
   <p> Politics Made Simple </p>
-  <%= link_to "Check Out Candidates", candidates %>
+  <%= link_to "Check Out Candidates", candidates_path %>
 </div>
