adding names to candidates index

--- a/app/views/candidates/index.html.erb
+++ b/app/views/candidates/index.html.erb
@@ -4,28 +4,9 @@
   <a class="navbar-brand" href="/candidate/show">Candidates</a>
       <div class="navbar-collapse collapse sidebar-navbar-collapse">
         <ul class="nav navbar-nav">
-
-          <li class="active"><a href="#">Candidate 1</a></li>
-          <li><a href="#">candidate 2</a></li>
-          <li><a href="#">candidate 3</a></li>
-          <li><a href="#">candidate 4</a></li>
-          <li><a href="#">candidate 5</a></li>
-          <li><a href="#">candidate 6</a></li>
-          <li><a href="#">candidate 7</a></li>
-          <li><a href="#">candidate 8</a></li>
-          <li><a href="#">candidate 9</a></li>
-          <li><a href="#">candidate 10</a></li>
-          <li><a href="#">candidate 11</a></li>
-          <li><a href="#">candidate 12</a></li>
-          <li><a href="#">candidate 13</a></li>
-          <li><a href="#">candidate 14</a></li>
-          <li><a href="#">candidate 15</a></li>
-          <li><a href="#">candidate 16</a></li>
-          <li><a href="#">candidate 17</a></li>
-          <li><a href="#">candidate 18</a></li>
-          <li><a href="#">candidate 19</a></li>
-          <li><a href="#">candidate 20</a></li>
-          <li><a href="#">candidate 21</a></li>
+          <%@candidates.each do |candidate|%>
+          <li><a href="candidate/<%=candidate.id %>"><%= candidate.first_name %> <%= candidate.last_name %></a></li>
+          <% end %>
         </ul>
       </div>
 
