--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,8 +1,7 @@
 <div class= "container">
 
   <div class="image-banner">
-
-    <%= image_tag( "banner-copy2.svg") %>
+    <%= image_tag( "banner-copy2.svg", class: "landing-page-image") %>
   </div>
 
   <div class="phrase">
