--- a/app/views/candidates/index.html.erb
+++ b/app/views/candidates/index.html.erb
@@ -1,21 +1,24 @@
-<div class="container">
-<h1> Candidate Index Page </h1>
-
-
-<div class="navbar navbar-default" role="navigation">
-  <a class="navbar-brand" href="/candidate/show">Candidates</a>
-      <div class="navbar-collapse collapse sidebar-navbar-collapse">
-        <ul class="nav navbar-nav">
-          <%@candidates.each do |candidate|%>
-          <li><a href="candidate/<%=candidate.id %>"><%= candidate.first_name %> <%= candidate.last_name %></a></li>
-          <% end %>
-        </ul>
-      </div>
-
+<div class="candidates-container">
+<div class="page-header">
+  <%= image_tag( "banner-copy2.svg", class: "candidates-page-image") %>
+</div>
+  <div class="navbar navbar-default" role="navigation">
+        <div class="navbar-collapse collapse sidebar-navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li class="republican"> Republicans </li>
+            <% @candidates.get_party_members("Republican").each do |candidate| %>
+              <li><%= link_to "#{candidate.first_name} #{candidate.last_name}", candidate_path %></li>
+            <% end %>
+            <li class="democrat"> Democrats </li>
+            <% @candidates.get_party_members("Democrat").each do |candidate| %>
+              <li><%= link_to "#{candidate.first_name} #{candidate.last_name}", candidate_path %></li>
+            <% end %>
+          </ul>
+        </div>
   </div>
-</div>
 
-<div class="d3">
 
-</div>
+    <div class="d3">
+
+    </div>
 </div>
