add scrolling, add footer, fix background-img

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,39 @@
  *= require_tree .
  *= require_self
  */
+
+
+
+footer{
+  position: absolute;
+  bottom: -75px;
+  height: 40px;
+  margin-top: 10px;
+  width:100%;
+  display: inline-block;
+  background-color: #21409A ;
+  font-size: 15px;
+}
+
+li{
+  list-style: none;
+  display: inline;
+  padding-right: 5px;
+  bottom: 0px;
+}
+
+.politips{
+  position: absolute;
+  margin-top: 5px;
+  bottom: 0px;
+  text-align: left;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 15px;
+}
+
+.group-names{
+  font-family: 'Open Sans', sans-serif;
+  margin-right: 10px;
+  text-align: right;
+  font-size: 15px;
+}
