--- a/app/assets/stylesheets/candidates.css
+++ b/app/assets/stylesheets/candidates.css
@@ -1,11 +1,15 @@
 .navbar {
-  width: 15%;
+  margin-left: 5px;
+  width: 19%;
   font-family: 'Open Sans', sans-serif;
 }
 
+
+
 .sidebar-nav .navbar .navbar-collapse {
-    padding: 0;
+    padding: 0px;
     max-height: none;
+    width: 25px;
 }
 
 .sidebar-nav .navbar ul {
@@ -23,16 +27,26 @@
 
 .candidates-page-image{
   width: 100%;
-  height: 100px;
+  height: 120px;
  }
+
+.navbar-default .navbar-collapse{
+  margin-left: 0px;
+}
 
 .navbar-default .navbar-nav>li>a {
   font-family: 'Open Sans', sans-serif;
   color: #2A2525;
 }
 
+.navbar-nav{
+    max-height: 500px;
+    overflow-y:scroll;
+    margin: 10px;
+}
+
 .navbar-default .navbar-nav>li>a:hover {
-  color: grey;
+  color: gold;
 }
 
 /*.one_republican:hover{
@@ -49,5 +63,12 @@
 
 .democrat{
   color: #21409A;
+}
+
+.page-header{
+  background-image: url("/images/whitecanvasbackground.png") ;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  /*border-bottom: none;*/
 }
 
