Fix button link to candidates page

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -35,6 +35,7 @@
 
 .btn-lg{
   font-family: 'Open Sans', sans-serif;
+  color: white;
   background-color: #E93829;
   background-color: #21409A;
 }
