--- a/app/views/candidates/index.html.erb
+++ b/app/views/candidates/index.html.erb
@@ -1,38 +1,35 @@
-<div class="candidates-container">
-  <div class="page-header">
+<div id="wrapper">
+    <div class="page-header">
     <%= image_tag( "banner-copy2.svg", class: "candidates-page-image") %>
-  </div>
-  <div class="navbar navbar-default" role="navigation">
-    <div class="navbar-collapse collapse sidebar-navbar-collapse">
-      <ul class="nav navbar-nav">
-        <li class="republican"> Republicans </li>
-        <% @candidates.get_party_members("Republican").each do |candidate| %>
-          <li class="link"><%= link_to "#{candidate.first_name} #{candidate.last_name}", candidates_path, id: candidate.last_name %></li>
-        <% end %>
-        <li class="democrat"> Democrats </li>
-        <% @candidates.get_party_members("Democrat").each do |candidate| %>
-          <li class="link"><%= link_to "#{candidate.first_name} #{candidate.last_name}", candidates_path, id: candidate.last_name %></li>
-        <% end %>
-      </ul>
+    <p class="explanation"> Scroll through the candidates, click to see how much a candidate publicly talks about an issue</p>
     </div>
-  </div>
+    <!-- Sidebar -->
+    <div id="sidebar-wrapper">
+        <ul class="sidebar-nav">
+            <li class="republican"> Republicans </li>
+            <% @candidates.get_party_members("Republican").each do |candidate| %>
+            <li class="link"><%= link_to "#{candidate.first_name} #{candidate.last_name}", candidates_path, id: candidate.last_name %></li>
+            <% end %>
+            <li class="democrat"> Democrats </li>
+            <% @candidates.get_party_members("Democrat").each do |candidate| %>
+            <li class="link"><%= link_to "#{candidate.first_name} #{candidate.last_name}", candidates_path, id: candidate.last_name %></li>
+            <% end %>
+        </ul>
+    </div>
+    <!-- /#sidebar-wrapper -->
 
-  <div class="d3">
+    <!-- Page Content -->
+    <div id="page-content-wrapper">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="d3">
 
-  </div>
+                    </div>
+            </div>
+        </div>
+    </div>
+    <!-- /#page-content-wrapper -->
+
 </div>
-
-<footer>
-  <ul>
-    <div class"politips">
-      <li class="footer-link"><a href"https://github.com/dpasie2/politips-final-project">politips</a></li>
-    </div>
-    <div class="group-names">
-      <li class="footer-link"><a href"https://github.com/bcahill">bcahill</a></li>
-      <li class="footer-link"><a href"https://github.com/pbsugg">pbsugg</a></li>
-      <li class="footer-link"><a href"https://github.com/colemcampbell">colemcampbell</a></li>
-      <li class="footer-link"><a href"https://github.com/dpasie2">dpasie2</a></li>
-      <li class="footer-link"><a href"https://github.com/alita42">alita42</a></li>
-    </div>
-  <ul>
-</footer>
+<!-- /#wrapper -->
