fixes-d3-with-actual-data

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 <%= yield %>
 
 </body>
-<footer>
+<!-- <footer>
   <ul>
     <div class"politips">
       <li class="footer-link"><a href"https://github.com/dpasie2/politips-final-project">politips</a></li>
@@ -26,5 +26,5 @@
       <li class="footer-link"><a href"https://github.com/alita42">alita42</a></li>
     </div>
   <ul>
-</footer>
+</footer> -->
 </html>
