changes by bridget

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -38,6 +38,7 @@
   color: white;
   background-color: #E93829;
   background-color: #21409A;
+  width: 225px;
 }
 
 .btn-lg:hover{
@@ -50,5 +51,4 @@ a{
 
 a:hover{
   color: white;
-
 }
