--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -10,7 +10,8 @@
 
   <div class="button-container">
     <%= button_to "Check Out Candidates", candidates_path, method: "get", class: "btn-lg" %>
-  <!-- <button type="button" class="btn-lg"><%= link_to "Check Out Candidates", candidates_path %> -->
+    <%= button_to "Check Out Polls", polls_path, method: "get", class: "btn-lg" %>
+
   </div>
 
 </div>
