--- a/app/assets/stylesheets/candidates.css
+++ b/app/assets/stylesheets/candidates.css
@@ -30,7 +30,7 @@
     width: 0;
     height: 100%;
     margin-left: -250px;
-    overflow-y: auto;
+    overflow-y: scroll;
     background: #000;
     -webkit-transition: all 0.5s ease;
     -moz-transition: all 0.5s ease;
@@ -156,6 +156,10 @@
   border-bottom: 1px solid #F1EBEB;
 }
 
-.explanation{
+.bubble-explanation{
   text-align: center;
+}
+
+#poll-button{
+
 }
