--- a/app/assets/stylesheets/candidates.css
+++ b/app/assets/stylesheets/candidates.css
@@ -159,3 +159,29 @@
 .explanation{
   text-align: center;
 }
+
+#twitter-overlay {
+  display: none;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  opacity: 0.87;
+}
+
+#tweet-container {
+  display: none;
+  position: absolute;
+  top: 300px;
+  margin: 0 calc(50% - 250px);
+}
+
+/*#tweet-container iframe{
+  width: 500px;
+}*/
+
+#tweet-box {
+  display: none;
+}
