--- a/app/assets/stylesheets/candidates.css
+++ b/app/assets/stylesheets/candidates.css
@@ -49,6 +49,9 @@
     background-color: rgba(0,0,0,.5);
     -webkit-box-shadow: 0 0 1px rgba(255,255,255,.5);
 }
+.active {
+  background-color: lightgrey;
+}
 
 #wrapper.toggled #sidebar-wrapper {
     width: 250px;
