--- a/app/views/candidates/index.html.erb
+++ b/app/views/candidates/index.html.erb
@@ -21,6 +21,7 @@
 
   <!-- Page Content -->
   <div id="page-content-wrapper">
+    <h3 id="candidate-header"></h3>
     <p class="bubble-explanation">
       Scroll through the candidates, click to see how much a candidate publicly talks about an issue
     </p>
