--- a/app/assets/stylesheets/candidates.css
+++ b/app/assets/stylesheets/candidates.css
@@ -11,17 +11,6 @@
   font-family: 'Open Sans', sans-serif;
 }
 
-#wrapper {
-    padding-left: 0;
-    -webkit-transition: all 0.5s ease;
-    -moz-transition: all 0.5s ease;
-    -o-transition: all 0.5s ease;
-    transition: all 0.5s ease;
-}
-
-#wrapper.toggled {
-    padding-left: 250px;
-}
 
 #sidebar-wrapper {
     z-index: 1000;
@@ -31,6 +20,7 @@
     height: 100%;
     margin-left: -250px;
     overflow-y: scroll;
+    overflow-x: hidden;
     background: #000;
     -webkit-transition: all 0.5s ease;
     -moz-transition: all 0.5s ease;
@@ -42,10 +32,10 @@
 
 ::-webkit-scrollbar {
     -webkit-appearance: none;
-    width: 7px;
+    width: 8px;
 }
 ::-webkit-scrollbar-thumb {
-    border-radius: 4px;
+    border-radius: 5px;
     background-color: rgba(0,0,0,.5);
     -webkit-box-shadow: 0 0 1px rgba(255,255,255,.5);
 }
@@ -71,8 +61,8 @@
     position: absolute;
     top: 0;
     width: 250px;
-    margin-left: 15px;
-    padding: 0;
+    margin-left: -10px;
+    padding-left: 10px;
     list-style: none;
 }
 
@@ -84,19 +74,20 @@
 .sidebar-nav li a {
     display: block;
     text-decoration: none;
-    color: #999999;
+    color: #2B2A2A;
+
 }
 
 .sidebar-nav li a:hover {
     text-decoration: none;
-    color: #2B2A2A;
+    color: #767068;
     background: rgba(255,255,255,0.2);
 }
 
 .sidebar-nav li a:active,
 .sidebar-nav li a:focus {
     text-decoration: none;
-    background-color: lightgrey;
+    background-color: #dbdbdb;
 }
 
 .sidebar-nav > .sidebar-brand {
@@ -114,7 +105,7 @@
     background: none;
 }
 
-@media(min-width:768px) {
+@media(min-width:1000px) {
     #wrapper {
         padding-left: 250px;
     }
@@ -133,25 +124,11 @@
     #wrapper.toggled #sidebar-wrapper {
         width: 0;
     }
-
-    #page-content-wrapper {
-        max-width: 900px;
-        padding: 20px;
-        padding-left: 200px;
-        position: relative;
-        width: 1000px;
-    }
-
-    #wrapper.toggled #page-content-wrapper {
-        position: relative;
-        margin-right: 0;
-    }
 }
 
 .candidates-page-image{
-  width: 100%;
+  width: 60%;
   height: 122px;
-  text-align: center;
  }
 
 .republican{
@@ -172,6 +149,12 @@
   text-align: center;
 }
 
-#poll-button{
+#category-chart{
+  display: block;
+  margin: auto;
+}
 
+
+#poll-button{
+    width: 30%;
 }
