--- a/app/assets/stylesheets/polls.css
+++ b/app/assets/stylesheets/polls.css
@@ -1,11 +1,10 @@
 .polls-explanation{
   text-align: center;
-  width: 25%;
-  margin-left: 100px;
+  display: inline-block;
 }
 
 #candidate-button{
-  width:25%;
+  width:30%;
   float: right;
 }
 
@@ -43,7 +42,7 @@
 }
 
 .polls-page-image{
-  width: 40%;
+  width: 60%;
   height: 122px;
  }
 
@@ -53,4 +52,10 @@
 
 #element{
   display: inline-block;
+}
+
+#polls-chart{
+  display: block;
+  margin: auto;
+  width: 1600px;
 }
