--- a/app/assets/stylesheets/candidates.css
+++ b/app/assets/stylesheets/candidates.css
@@ -149,6 +149,10 @@
   text-align: center;
 }
 
+#candidate-header {
+  text-align: center;
+}
+
 #category-chart {
   display: block;
   margin: auto;
