--- a/app/views/candidates/index.html.erb
+++ b/app/views/candidates/index.html.erb
@@ -5,11 +5,11 @@
 
   <div id="sidebar-wrapper">
     <ul class="sidebar-nav">
-      <li class="republican"> Republicans </li>
+      <li class="republican"> Republicans by Rank: </li>
       <% @candidates.get_party_members("Republican").each do |candidate| %>
       <li class="link"><%= link_to "#{candidate.first_name} #{candidate.last_name}", candidates_path, id: candidate.last_name %></li>
       <% end %>
-      <li class="democrat"> Democrats </li>
+      <li class="democrat"> Democrats by Rank:</li>
       <% @candidates.get_party_members("Democrat").each do |candidate| %>
       <li class="link"><%= link_to "#{candidate.first_name} #{candidate.last_name}", candidates_path, id: candidate.last_name %></li>
       <% end %>
