updates description on candidates page

--- a/app/views/candidates/index.html.erb
+++ b/app/views/candidates/index.html.erb
@@ -19,7 +19,7 @@
   <div id="content">
     <h3 id="candidate-header"></h3>
     <p class="bubble-explanation">
-      Scroll through the candidates, select to see how much a candidate publicly talks about an topic. Click on an issue to see their top tweets pertaining to the topic.
+      Scroll through the candidates and click to see how much a candidate publicly talks about a particular topic. Click on the topic to see their top tweets pertaining to each.
     </p>
     <div class="d3">
       <%= javascript_include_tag("categoryvisuals")%>
