--- a/app/views/candidates/index.html.erb
+++ b/app/views/candidates/index.html.erb
@@ -1,5 +1,7 @@
   <div class="page-header">
+    <%= link_to "Voter Registration", positivity_path, method: "get", class: "btn-lg", id:"registration-button" %>
     <%= image_tag( "banner-copy2.svg", class: "candidates-page-image") %>
+    <%= link_to "Candidate Positivity", positivity_path, method: "get", class: "btn-lg", id:"poll-button" %>
     <%= link_to "Candidate Standings", polls_path, method: "get", class: "btn-lg", id:"poll-button" %>
   </div>
 
