--- a/app/views/polls/index.html.erb
+++ b/app/views/polls/index.html.erb
@@ -1,6 +1,7 @@
 <div class="page-header">
-
+    <%= link_to "Voter Registration", positivity_path, method: "get", class: "btn-lg", id:"registration-button" %>
     <%= image_tag( "banner-copy2.svg", class: "polls-page-image", id: "element") %>
+    <%= link_to "Candidate Positivity", positivity_path, method: "get", class: "btn-lg", id:"positivity-button" %>
     <%= link_to "Candidate Positions", candidates_path, method: "get", class: "btn-lg", id:"candidates-button" %>
 </div>
     <!-- Sidebar -->
