Add front page vote button

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -11,6 +11,7 @@
   <div class="button-container">
     <%= button_to "Check Out Candidates", candidates_path, method: "get", class: "btn-lg" %>
     <%= button_to "Check Out Polls", polls_path, method: "get", class: "btn-lg" %>
+    <%= button_to "Check Out Positivity", positivity_path, method: "get", class: "btn-lg" %>
 
   </div>
 
