repositioned dems polling data

--- a/app/assets/stylesheets/polls.css
+++ b/app/assets/stylesheets/polls.css
@@ -56,6 +56,10 @@
 
 #polls-chart {
   display: block;
-  margin: auto;
-  width: 1400px;
+  margin: 0;
+  width: 100%;
+}
+
+#d3-charts {
+  margin-left: 0;
 }
