--- a/app/views/positivity/index.html.erb
+++ b/app/views/positivity/index.html.erb
@@ -1,6 +1,6 @@
 <div class="page-header">
     <%= link_to "Voter Registration", positivity_path, method: "get", class: "btn-lg", id:"registration-button" %>
-    <%= image_tag( "banner-copy2.svg", class: "polls-page-image", id: "element") %>
+    <%= image_tag( "banner-copy2.svg", class: "candidates-page-image", id: "element") %>
     <%= link_to "Candidate Standings", polls_path, method: "get", class: "btn-lg", id:"poll-button" %>
     <%= link_to "Candidate Positions", candidates_path, method: "get", class: "btn-lg", id:"candidates-button" %>
 </div>
