--- a/app/views/polls/index.html.erb
+++ b/app/views/polls/index.html.erb
@@ -1,5 +1,5 @@
 <div class="page-header">
-    <%= link_to "Voter Registration", positivity_path, method: "get", class: "btn-lg", id:"registration-button" %>
+    <%= link_to "Register to Vote!", "https://www.usa.gov/register-to-vote", method: "get", class: "btn-lg", id:"registration-button" %>
     <%= image_tag( "banner-copy2.svg", class: "candidates-page-image", id: "element") %>
     <%= link_to "Candidate Positivity", positivity_path, method: "get", class: "btn-lg", id:"positivity-button" %>
     <%= link_to "Candidate Positions", candidates_path, method: "get", class: "btn-lg", id:"candidates-button" %>
